# Space-Shooter-Game

./: CMakeLists.txt  README.md
src/: bullet.cpp  bullet.h  defs.h  effect.cpp  effect.h  enemy.cpp  enemy.h  entity.cpp  entity.h  game.cpp  game.h  highscore.cpp  highscore.h  main.cpp  player.cpp  player.h  powerup.cpp  powerup.h  renderer.cpp  renderer.h  title.cpp  title.h  util.cpp  util.h
